# svelte-rust-agents-sdk

./: .gitignore  README.md  docker-compose.yml
agent/: .env.example  Cargo.toml
agent/crates/agent-config/src/: lib.rs
agent/crates/agent-core/src/: lib.rs
agent/crates/agent-engine/: Cargo.toml
agent/crates/agent-engine/src/: lib.rs
agent/crates/agent-network/src/: client.rs  lib.rs  ollama.rs  unified.rs
agent/crates/agent-server/: Cargo.toml
agent/crates/agent-server/src/: db.rs  dto.rs  main.rs  ws.rs
agent/crates/agent-server/src/handlers/: mod.rs  model.rs  pipeline.rs
agent/crates/agent-server/src/services/: mod.rs  model.rs
agent/crates/agent-tools/: Cargo.toml
agent/crates/agent-tools/src/: fetch_url.rs  lib.rs  web_search.rs
agent/crates/agents-llm/: Cargo.toml
agent/crates/agents-llm/src/: client.rs  lib.rs
agent/crates/agents-pipeline/src/: evaluator.rs  frontline.rs  lib.rs  orchestrator.rs  prompts.rs  runner.rs
agent/crates/agents-server/src/: protocol.rs  state.rs  ws.rs
agent/crates/agents-workers/src/: email.rs  general.rs  lib.rs  search.rs
agent/data/: pipelines.db
agent/presets/: 4-orchestrator-worker.json
client/: package-lock.json  package.json
client/.svelte-kit/: ambient.d.ts
client/src/: app.css
client/src/lib/: types.ts
client/src/lib/components/: Header.svelte  PipelineEditor.svelte
client/src/lib/stores/: chat.ts
client/src/routes/: +page.svelte
client/src/routes/composer/: +page.svelte
crates/fissio-config/src/: lib.rs
crates/fissio-editor/client/src/: app.css
crates/fissio-editor/client/src/lib/: types.ts
crates/fissio-editor/client/src/lib/components/: DataTable.tsx  Header.tsx  Settings.tsx
crates/fissio-editor/client/src/lib/stores/: chat.ts  settings.ts
crates/fissio-editor/client/src/pages/: Chat.tsx  Observe.tsx
crates/fissio-server/src/: dto.rs
crates/fissio-server/src/handlers/: chat.rs
crates/fissio-server/src/services/: chat.rs
fissio/: Cargo.toml  README.md
fissio/crates/fissio/: Cargo.toml
fissio/crates/fissio-config/src/: lib.rs
fissio/crates/fissio-core/src/: lib.rs
fissio/crates/fissio-editor/: Cargo.toml
fissio/crates/fissio-editor/client/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fissio/crates/fissio-editor/client/src/: App.tsx  app.css  index.tsx
fissio/crates/fissio-editor/client/src/lib/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  PipelineEditor.tsx  Settings.tsx
fissio/crates/fissio-editor/client/src/lib/stores/: chat.ts  settings.ts
fissio/crates/fissio-editor/client/src/pages/: Chat.tsx  Composer.tsx
fissio/crates/fissio-editor/src/: lib.rs
fissio/crates/fissio-engine/src/: lib.rs
fissio/crates/fissio-llm/src/: anthropic.rs  client.rs  lib.rs  unified.rs
fissio/crates/fissio-server/: .env.example  Cargo.toml  Dockerfile
fissio/crates/fissio-server/presets/: 1-prompt-chaining.json  2-routing.json  3-parallelization.json  5-evaluator-optimizer.json
fissio/crates/fissio-server/src/: dto.rs  error.rs  main.rs
fissio/crates/fissio-server/src/handlers/: chat.rs  init.rs  mod.rs  model.rs  pipeline.rs  tools.rs
fissio/crates/fissio-server/src/services/: chat.rs  mod.rs  model.rs
fissio/crates/fissio-tools/src/: lib.rs  web_search.rs
fissio/crates/fissio/src/: lib.rs
spec/: fissio-editor.md  orchestrate.md  sse.md  tools.md
