[package]
name = "agent-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-config = { workspace = true }
agent-core = { workspace = true }
agent-network = { workspace = true }
agent-tools = { workspace = true }
async-trait = { workspace = true }
async-recursion = "1.1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
