[package]
name = "agent-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-server"
path = "src/main.rs"

[dependencies]
agent-config.workspace = true
agent-core.workspace = true
agent-engine.workspace = true
agent-network.workspace = true
agent-tools.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
uuid.workspace = true
anyhow.workspace = true
futures = "0.3"
rusqlite.workspace = true
