[package]
name = "agents-llm"
version.workspace = true
edition.workspace = true

[dependencies]
agents-core.workspace = true
async-openai.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures = "0.3"
