[package]
name = "fissio-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Default HTTP server for fissio agent framework"

[[bin]]
name = "fissio-server"
path = "src/main.rs"

[dependencies]
# Fissio framework
fissio-config = { workspace = true }
fissio-core = { workspace = true }
fissio-engine = { workspace = true }
fissio-llm = { workspace = true }
fissio-tools = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Runtime & async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
dotenvy = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
