[package]
name = "fissio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pipeline-first agent framework for LLM-powered systems"
keywords = ["llm", "agent", "pipeline", "ai", "orchestration"]
categories = ["asynchronous", "web-programming"]

[dependencies]
fissio-config = { workspace = true }
fissio-core = { workspace = true }
fissio-engine = { workspace = true }
fissio-llm = { workspace = true }
fissio-tools = { workspace = true }
fissio-editor = { workspace = true, optional = true }

[features]
default = ["openai", "anthropic", "tools-web"]
openai = []
anthropic = []
tools-web = []
editor = ["dep:fissio-editor"]

[dev-dependencies]
tokio = { workspace = true }
